# cryp_recovery

./: .gitignore  README.md  architecture.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  database.py  main.py  models.py  requirements.txt
backend/core/: dispatcher.py
frontend/: package-lock.json  package.json
frontend/src/components/: AdminPanel.tsx  Dashboard.tsx
frontend/src/workers/: miner.worker.ts
frontend/wasm-miner/: Cargo.toml
frontend/wasm-miner/src/: lib.rs
infrastructure/n8n/: load_balancer_workflow.json
infrastructure/prometheus/: prometheus.yml
